[Mosip-32572] java21 migration (#193)
* [Mosip-32572] migration to java

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* [Mosip-32572] migration to java

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* [Mosip-32572] java21 migration

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

---------

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>